# libsamp

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md
.github/workflows/: build.yml
analysis/metadata/: 01_artifacts_overview.txt  02_dll_header_sections_objdump.txt  03_dll_imports_objdump.txt  04_dll_info_rzbin.txt  05_dll_imports_rzbin.txt  06_dll_strings_all.txt  07_dll_strings_network_focus.txt  08_dll_wsock32_imports.txt  09_installer_listing.txt  10_installer_payload_compare.txt  ABI_BASELINE.md  CURRENT_DLL_DETAILED_MAP.md  CURRENT_STATUS_AND_UNKNOWN_DLL_RE_PLAN_2026-05-31.md  INITIAL_FINDINGS.md  LEGACY_0_2X_CROSSWALK.md  LOCAL_SOURCE_BASES.md  NETWORK_SURVEY.md  STARTUP_UI_PATH_SPEC.md
analysis/notes/: entry_100cbc90.txt  fcn_1002a5b0_auto.txt  fcn_10040620_auto.txt  fcn_100427a0_auto.txt  fcn_10053820_wsa_init.txt  fcn_10053850_wsa_cleanup.txt  fcn_10053870_connect_ipv4.txt  fcn_100538b0_socket_setup_bind.txt  fcn_100539c0_resolve_helper.txt  fcn_10053a00_auto.txt  fcn_10053ab0_auto.txt  fcn_10053b40_auto.txt  fcn_10053b70_auto.txt  fcn_10053bf0_auto.txt  fcn_10055e60_auto.txt  fcn_10055f30_auto.txt  fcn_10055ff0_connect_worker.txt  fcn_10056130_auto.txt  fcn_100561a0_auto.txt  fcn_100561c0_auto.txt  fcn_10056220_auto.txt  fcn_10056270_auto.txt  fcn_100562c0_auto.txt  fcn_10056300_auto.txt  fcn_10056880_auto.txt  fcn_10056de0_auto.txt  fcn_10056fc0_auto.txt  fcn_100571c0_auto.txt  fcn_10057200_auto.txt  fcn_100c50c0_dispatch_core.txt  fcn_100cbb0f_secondary_dispatch.txt  startup_ui_deep_dive_2026-03-05.md
assets/: LOADSCS.txd
docs/re/: actor_probe_runbook_20260716.md  actor_runtime_combat_compat_20260717.md  archivefs_dropin_20260720.md  custom_object_heavy_probe_runbook_20260709.md  dialog_menu_original_probe_runbook_20260717.md  legacy_client_commands_20260716.md  legacy_gang_zone_rpc_compat_20260716.md  legacy_menu_rpc_compat_20260716.md  map_icons_r5_20260716.md  object_textdraw_probe_runbook_20260708.md  reloop_opcode_parity_contract_20260718.md  rpc175_set_actor_facing_static_20260723.md  rpc176_set_actor_position_static_20260723.md  rpc178_set_actor_health_static_20260723.md  rpc_attach_edit_crime_removebuilding_20260717.md  rpc_batch_player_audio_chat_20260714.md  rpc_gap_original_probe_runbook_20260717.md  samp_custom_asset_pipeline.md  samp_re_rpc178_overlay_20260723.md  sampdll-stable.ini.example  sampdll.ini.example  textdraw_legacy_stack.md  textdraw_probe_runbook_20260706.md  textdraw_render_stack.md
docs/traces/: font5_preview_original_20260715.md  prespawn_scene_original_20260715.md  rpc175_set_actor_facing_raw_original_20260723.md  rpc175_set_actor_facing_raw_reimpl_20260724.md  rpc175_set_actor_facing_raw_samp_re_20260723.md  rpc178_samp_re_parity_20260723.md  rpc178_set_actor_health_edges_original_20260723.md  rpc178_set_actor_health_edges_samp_re_20260723.md  rpc178_set_actor_health_original_20260723.md
omp-server-bare/filterscripts/: attachments.amx  attachments.pwn  npc_trains.pwn
omp-server-bare/gamemodes/: bare.amx  bare.pwn  object_probe.pwn  textdraw_probe.pwn
reimpl/: ABI_TRACKER.md  CMakeLists.txt  README.md
reimpl/cmake/toolchains/: i686-w64-mingw32.cmake
reimpl/include/sampdll/archive/: saa.h  win32_archive_fs.h
reimpl/include/sampdll/net/: dual_stack.h  ipv4_socket_compat.h  legacy_ipv4_compat.h  raknet_bridge.h  raknet_client_adapter.h  tcp_bootstrap_manager.h
reimpl/include/sampdll/runtime/: boot.h  hook_bridge.h
reimpl/scripts/: build_in_devbuild_toolbox.sh  build_win32.sh
reimpl/src/: actor_facing_compat.c  actor_facing_compat.h  dllmain.c  runtime_bridge.c  runtime_hook_bridge.c  samp.rc
reimpl/src/archive/: saa.c  win32_archive_fs.c
reimpl/src/net/: death_message_codec.h  dual_stack.c  ipv4_socket_compat.c  legacy_ipv4_compat.c  raknet_bridge.cpp  raknet_client_adapter.cpp  raknet_client_adapter_internal.h  raknet_client_adapter_stub.c  tcp_bootstrap_manager.c
reimpl/tests/: test_actor_facing_compat.c  test_death_message_codec.cpp  test_dual_stack.c  test_ipv4_socket_compat.c  test_legacy_ipv4_compat.c  test_raknet_bridge.c  test_raknet_split_reassembly.cpp  test_saa.c  test_samp_client_transport.cpp  test_tcp_bootstrap_manager.c
repo/: PUBLICATION_CHECKLIST.md  README.md  RE_EVIDENCE_GUIDE.md  TASK_TRACKER.md
specs/: CLEANROOM_WORKFLOW.md  SPEC-ABI-001_BOOT_SEQUENCE.md  SPEC-NET-001_DUAL_STACK_ENDPOINT_RESOLUTION.md  SPEC-NET-002_HOSTPORT_PARSING.md  SPEC-NET-003_IPV4_SOCKET_PRIMITIVES.md  SPEC-NET-003_LEGACY_IPV4_SOCKET_PRIMITIVES.md  SPEC-NET-004_TCP_BOOTSTRAP_MANAGER_LIFECYCLE.md  SPEC-NET-005_KNOGLE_RAKNET_INTEGRATION.md  SPEC-NET-006_NETWORK_OBJECT_WORKER_CLUSTER.md  SPEC-PLAN-001_FULL_REBUILD_ROADMAP.md  SPEC-PLAN-002_BINARY_COMPATIBILITY_STRIKE_PLAN.md
toolboxes/reverse-engineering/: README.md  create.sh  packages.fedora.txt  provision.sh  requirements.txt  run.sh
tools/: analyze_samp_assets.py  analyze_textdraw_trace.sh  build_loadscs_txd.py  build_runtime_baseline.sh  check_pe_abi_parity.sh  check_pe_abi_strict.sh  collect_pe_baseline.sh  collect_pe_manifest.sh  compare_runtime_traces.sh  generate_re_map.sh  shape_pe_imports.py  trim_wine_trace.sh
tools/asi_probe/: CMakeLists.txt  README.md  build_win32.sh
tools/asi_probe/src/: samp_probe_asi.c
tools/ghidra/: InspectActorSetFacingAngle.java  InspectActorSetHealth.java  InspectActorSetPosition.java  analyze-headless.sh
tools/openmp_rpc175_fixture/: CMakeLists.txt  README.md  build.sh
tools/openmp_rpc175_fixture/src/: rpc175_fixture.cpp
tools/openmp_rpc176_fixture/: CMakeLists.txt  README.md  build.sh
tools/openmp_rpc178_fixture/: CMakeLists.txt  README.md  build.sh
tools/reloop/: README.md  control_client.py  (+6 more)
tools/reloop_control/: CMakeLists.txt  README.md  build_win32.sh
tools/reloop_control/src/: reloop_control.c
tools/samp_re/: CMakeLists.txt  README.md  build_win32.sh
tools/samp_re/include/samp_re/: rpc175_logic.h  rpc178_logic.h
tools/samp_re/src/: rpc175_logic.c  rpc178_logic.c  samp_re_asi.c
tools/samp_re/tests/: test_rpc175_logic.c  test_rpc178_logic.c
(+51 files in other folders)
